Restructured Index.php logical code flow, finished product list, edit product, delete product. Added bootstrap tooltip to the web app.

--- a/css/customStyles.css
+++ b/css/customStyles.css
@@ -66,3 +66,7 @@ fieldset[disabled] .bs-btn-primary.active {
   color: #428bca;
   background-color: #fff;
 }
+.dropdown-menu {
+  width: 215px;
+  max-width: 225px;
+}
